--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
+    "mongoose": "^5.9.10",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
