--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@handlebars/allow-prototype-access": "^1.0.3",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.10",
     "uuid": "^7.0.3"
   },
