Публикация на githab

--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "node-express",
   "version": "1.0.0",
   "description": "",
+  "homepage": "./",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +23,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
     "express-session": "^1.17.1",
+    "gh-pages": "^2.2.0",
     "mongoose": "^5.9.10",
     "uuid": "^7.0.3"
   },
